Testing github webhook from push

--- a/MpgMvc/Views/Home/Index.cshtml
+++ b/MpgMvc/Views/Home/Index.cshtml
@@ -13,5 +13,6 @@
             Keep track of your car's gas mileage here!
         </p>
         <p><a class="btn btn-default" href="/Mileage/Create">Add a record</a></p>
+        <p>Testing github webhook!</p>
     </div>
 </div>
